(Format: Year/Month/Day)
Changes for 0.9.13
*05/05/07:
  * Remove default "gray" background (Simon)
    FbTk/FbWindow.cc
  * Fix titlebar transparency in some (tabbed) cases (Simon)
    FbWinFrame.cc
*05/05/06:
  * Added new Buttons for the Titlebar of a Window (Mathias)
    - Shade - just like the "Stick"-button
      Styleresources:
        window.shade.pixmap, window.shade.unfocus.pixmap, window.shade.pressed.pixmap
        window.unshade.pixmap, window.unshade.unfocus.pixmap, window.unshade.pressed.pixmap
		etc.
    - MenuIcon - click on it provides the windowmenu, if the app
      contains a pixmap (gvim, konqueror etc etc) the pixmap is displayed, a
      little menu otherwise. 
      Styleresources:
        windowmenu.pixmap, windowmenu.unfocus.pixmap windowmenu.pressed.pixmap
        etc.
    Example ~/.fluxbox/init - entry:
      session.titlebar.left: MenuIcon Stick
      session.titlebar.right: Shade Minimize Maximize Close
    Window.cc Resources.cc fluxbox.hh WinButton.cc/hh WinButtonTheme.cc/hh
  * xrestop should now display "Fluxbox" (Simon)
    Ewmh.hh/cc
  * Fix potential segfault menu bug, thanks chenfeng (Simon)
    Menu.cc
  * Added more KeyActions to TextBox (thanx to Vadim <suhanov_vadim@mail.ru>
      Control + LeftArrow  -> Moves cursor to the left direction, up to next word.
      Control + RightArrow -> to the right direction.
      Control + BackSpace  -> Removes everything from the cursor left side, up to next left word.
      Control + Delete     -> like above but removes to the right direction.
    FbTk/TextBox.cc/hh
*05/05/05:
  * Fix #1160244, #1099704, #1094107 Mutiple keyboard layout (Mathias + thanx
    to Vadim)
    Switching to a secondary/third keyboard layout via the xkb-extensions
    leads to broken NextWindow/PrevWindow and broken fbrun/CommandDialog:
    - be aware of what xkb is doing to the event.state
    - minor cleaning
    CommandDialog.cc WorkspaceCmd.cc Keys.cc FbTk/KeyUtil.cc/hh 